<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CarpoolMate</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    
    <string name="login_radiobtn_car">Owner</string>
    <string name="login_radiobtn_mate">Mate</string>
    <string name="login_txt_id">NickName</string>
    <string name="login_edittxt_id">닉네임을 입력하세요</string>
    <string name="login_txt_password">Password</string>
    <string name="login_edittxt_password">비밀번호를 입력하세요</string>
    <string name="login_btn_login">시작</string>
    <string name="login_btn_find">ID 찾기</string>
    <string name="login_image_logo">로고</string>
    
    <string name="checkin_btn_send">탑승</string>
    
    <string name="history_txtview_name">이 름 : </string>
    <string name="history_txtview_count">횟 수 : </string>
    <string name="history_btn_detail">자세히</string>
    <string name="LoadingSuccess">로딩 완료</string>
    <string name="history_btn_reset">갱신</string>
    
    <string name="maincar_txtView_num">번 호</string>
    <string name="maincar_txtView_name">UserID</string>
    <string name="maincar_txtView_count">이용 횟수</string>
    <string name="maincar_txtView_amount">이용 금액</string>
    <string name="maincar_btn_reset">갱신</string>
    

</resources>
