<?xml version="1.0" encoding="utf-8"?>

<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="#558ED5" >

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" >

        <TextView
            android:id="@+id/marincar_txtView_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="6dip"
            android:text="@string/maincar_txtView_num" />
        
        <TextView
            android:id="@+id/marincar_txtView_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="30dip"
            android:text="@string/maincar_txtView_name" />

        <TextView
            android:id="@+id/marincar_txtView_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dip"
            android:text="@string/maincar_txtView_count" />

        <TextView
            android:id="@+id/marincar_txtView_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dip"
            android:text="@string/maincar_txtView_amount" />
        
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" 
            />
    </TableRow>

</TableLayout>
